--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,17 @@
 <header>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <div class="logoDiv">
-      <img class="logoHeader" src="../src/imagenes/logo.png" alt="Logo">
+      <img class="logoHeader" src="../src/imagenes/logo1.png" alt="Logo">
     </div>
     <div class="input-group mb-3">
       <input type="text" class="form-control"  aria-label="Recipient's username" aria-describedby="button-addon2">
       <button class="btn btn-outline-secondary" type="button" >Buscar</button>
     </div>
     <div class="login">
-      <a href="../html/registro.html">Iniciar sesión / Registrarse</a>
+        <a class="dropbtn">Iniciar sesión / Registrarse</a>
+        <div class="login-content">
+          <button>Inicio</button>
+          <button onclick="location.href ='html/registro.html'">Registrarse </button>
     </div>
 </header>
 <body>
@@ -56,9 +59,9 @@
     </footer>
     <script src="../src/index.js"></script>
 
-    
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </html>
