--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       </button>
     </div>
   
-    <div class="div-25">
+    <div class="div-25" id="carouselContainer">
         <p>Contenido del div 25%</p>
     </div>
 
