--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         <a class="dropbtn">Iniciar sesión / Registrarse</a>
         <div class="login-content">
           <button>Inicio</button>
+          <button onclick="location.href ='html/login.html'">login </button>
           <button onclick="location.href ='html/registro.html'">Registrarse </button>
     </div>
 </header>
